feat: add footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>BG News</h1>
+        <h1><a href="index.html">BG News</a></h1>
         <a href="#">У НАС</a>
         <a href="#">ПО СВЕТА</a>
         <a href="#">ИКОНОМИКА</a>
@@ -59,7 +59,6 @@
 
 
         </div>
-
         <div class="column2">
                 <div class="card3">
                     <div class="card_content">
@@ -99,35 +98,58 @@
                 <div class="card3">
                     <div class="card_content">
                         <h4>Рубио и Сибиха обсъдиха мира в Украйна</h4>
-                        <p class="card_littleText">⏲ преди 2 час | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
                     </div>
                 </div>
                 <div class="card3">
                     <div class="card_content">
                         <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
-                        <p class="card_littleText">⏲ преди 2 час | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
                     </div>
                 </div>
                 <div class="card3">
                     <div class="card_content">
                         <h4>14 февруари - какво отбелязваме днес</h4>
-                        <p class="card_littleText">⏲ преди 3 час | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
                     </div>
                 </div>
                 <div class="card3">
                     <div class="card_content">
                         <h4>Моди и Тръмп решават за митата и търговията</h4>
-                        <p class="card_littleText">⏲ преди 3 час | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
                     </div>
                 </div>
                 <div class="card3">
                     <div class="card_content">
                         <h4>Тръмп подписа и за реципрочните мита</h4>
-                        <p class="card_littleText">⏲ преди 3 час | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
                     </div>
                 </div>
             </div>
+    </div>
+
+<div class="before_footer">
+    <p id="before_footer_text"><small>Всички текстове публикувани в News.bg са собственост на "Уеб Медия Груп" АД и са под закрила на "Закона за авторското право и сродните му права". Всички снимки и видеа са собственост на "Уеб Медия Груп" АД, разпространяват се с лиценз, който позволява свободното им ползване или се използват на база лицензионни договори. Съдържанието, включително текстове, снимки и видео не могат да бъдат използвани и копирани без изричното писмено разрешение на "Уеб Медия Груп" АД, включително с цел агрегиране на съдържанието и сходни услуги.
+    </small></p>
+    <p id="before_footer_copyright">©BG NEWS 2025 BG NEWS НЕ Е РЕГИСТРИРАНА ТЪРГОВСКА МАРКА. НЯМА ЗАПАЗЕНИ ПРАВА.</p>
+    <img src="images/webMediaGroupLogo.png" alt="webMediaGroupLogo" id="wMGlogo">
+</div>
+<div class="footer">
+        <div class="footer_left">
+            <a href="aboutUs.html">ЗА НАС</a>
+            <a href="#">КОНТАКТИ</a>
+            <a href="#">ОБЩИ УСЛОВИЯ</a>
         </div>
+        <div class="footer_center">
+            <h1 id="footer_h1"><a href="index.html">BG News</a></h1>
+        </div>
+        <div class="footer_right">
+            <a href="#">ЕКИП</a>
+            <a href="#">ЗА РЕКЛАМА</a>
+            <a href="https://github.com/krav700/News_Site">ПРОИЗХОД</a>
+        </div>
+</div>
+
 
 </body>
 </html>
