feat: complete aboutUs page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,10 +18,10 @@
     </div>
 
     <div class="content">
-    <p class="blog_text"><strong>За нас – BG NEWS </strong><br>
-        Добре дошли в BG NEWS – вашият надежден източник на актуални новини от България и света. Нашата мисия е да ви предоставяме бърза, достоверна и обективна информация по най-важните теми от политиката, икономиката, технологиите, културата и спорта. Вярваме, че информираният човек е силен човек, затова се стремим да ви предложим новините, които наистина имат значение.
-        Екипът ни се състои от професионални журналисти и анализатори, които следят събитията в реално време и подготвят задълбочени репортажи и коментари. Разчитаме на проверени източници и винаги подхождаме с критично мислене, за да ви представим най-достоверната картина на случващото се.
-        В BG NEWS вярваме, че медиите трябва да бъдат прозрачни, достъпни и безпристрастни. Нашата цел е не само да информираме, но и да предизвикваме конструктивни дискусии по важни обществени въпроси. Ако искате да сте винаги в крак със събитията, останете с нас – защото новините са важни!</p>
+    <p class="blog_text"> <span id="blog_heading"> За нас – BG NEWS </span><br><br>
+        Добре дошли в <strong> BG NEWS </strong>– вашият надежден източник на актуални новини от България и света. Нашата мисия е да ви предоставяме бърза, достоверна и обективна информация по най-важните теми от политиката, икономиката, технологиите, културата и спорта. Вярваме, че информираният човек е силен човек, затова се стремим да ви предложим новините, които наистина имат значение. <br>
+        Екипът ни се състои от професионални журналисти и анализатори, които следят събитията в реално време и подготвят задълбочени репортажи и коментари. Разчитаме на проверени източници и винаги подхождаме с критично мислене, за да ви представим най-достоверната картина на случващото се. <br>
+        В <strong>BG NEWS</strong> вярваме, че медиите трябва да бъдат прозрачни, достъпни и безпристрастни. Нашата цел е не само да информираме, но и да предизвикваме конструктивни дискусии по важни обществени въпроси. Ако искате да сте винаги в крак със събитията, останете с нас – защото новините са важни!</p>
     </div>
     <div class="all_footers">
         <div class="before_footer">
