--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Bg News</title>
 </head>
 <body>
@@ -20,11 +20,11 @@
     <div class="content">
         <div class="column1">
 
-                <img class="hero_image" src="images/mainImage.jpg" alt="Zelenski">
+                <img class="hero_image" src="../images/mainImage.jpg" alt="Zelenski">
 
         <div class="cards">
             <div class="card">
-                <img class="card_img" src="images/content1.jpg" alt="Makron">
+                <img class="card_img" src="../images/content1.jpg" alt="Makron">
                 <div class="card_content">
                     <h4>Макрон приема Тръмп като електрошок за Европа</h4>
                     <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="card2">
-                <img class="card_img" src="images/content3.jpg" alt="Makron">
+                <img class="card_img" src="../images/content3.jpg" alt="Makron">
                 <div class="card_content">
                     <h4>Моди и Тръмп решават за митата и търговията</h4>
                     <p class="card_littleText">⏲ преди 4 часа | <a href="#" class="card_link">Политика</a></p>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card_img" src="images/content4.jpg" alt="Makron">
+                <img class="card_img" src="../images/content4.jpg" alt="Makron">
                 <div class="card_content">
                     <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
                     <p class="card_littleText">⏲ преди 6 час | <a href="#" class="card_link">Политика</a></p>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="card2">
-                <img class="card_img" src="images/content2.jpg" alt="Makron">
+                <img class="card_img" src="../images/content2.jpg" alt="Makron">
                 <div class="card_content">
                     <h4>Великобритания задържа шестима за трафик на мигранти</h4>
                     <p class="card_littleText">⏲ преди 11 часа | <a href="#" class="card_link">Политика</a></p>
@@ -132,12 +132,12 @@
     <p id="before_footer_text"><small>Всички текстове публикувани в News.bg са собственост на "Уеб Медия Груп" АД и са под закрила на "Закона за авторското право и сродните му права". Всички снимки и видеа са собственост на "Уеб Медия Груп" АД, разпространяват се с лиценз, който позволява свободното им ползване или се използват на база лицензионни договори. Съдържанието, включително текстове, снимки и видео не могат да бъдат използвани и копирани без изричното писмено разрешение на "Уеб Медия Груп" АД, включително с цел агрегиране на съдържанието и сходни услуги.
     </small></p>
     <p id="before_footer_copyright">©BG NEWS 2025 BG NEWS НЕ Е РЕГИСТРИРАНА ТЪРГОВСКА МАРКА. НЯМА ЗАПАЗЕНИ ПРАВА.</p>
-    <img src="images/webMediaGroupLogo.png" alt="webMediaGroupLogo" id="wMGlogo">
+    <img src="../images/webMediaGroupLogo.png" alt="webMediaGroupLogo" id="wMGlogo">
 </div>
 <div class="footer">
         <div class="footer_left">
             <a href="aboutUs.html">ЗА НАС</a>
-            <a href="#">КОНТАКТИ</a>
+            <a href="contactUs.html">КОНТАКТИ</a>
             <a href="#">ОБЩИ УСЛОВИЯ</a>
         </div>
         <div class="footer_center">
