feat: move index.html to the main

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <h1><a href="index.html">BG News</a></h1>
+        <h1><a href="../index.html">BG News</a></h1>
         <a href="#">У НАС</a>
         <a href="#">ПО СВЕТА</a>
         <a href="#">ИКОНОМИКА</a>
@@ -37,7 +37,7 @@
                     <a href="#">ОБЩИ УСЛОВИЯ</a>
                 </div>
                 <div class="footer_center">
-                    <h1 id="footer_h1"><a href="index.html">BG News</a></h1>
+                    <h1 id="footer_h1"><a href="../index.html">BG News</a></h1>
                 </div>
                 <div class="footer_right">
                     <a href="#">ЕКИП</a>
