--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -48,14 +48,14 @@
                 <div class="footer_left">
                     <a href="aboutUs.html">ЗА НАС</a>
                     <a href="contactUs.html">КОНТАКТИ</a>
-                    <a href="#">ОБЩИ УСЛОВИЯ</a>
+                    <a href="generalTAC.html">ОБЩИ УСЛОВИЯ</a>
                 </div>
                 <div class="footer_center">
                     <h1 id="footer_h1"><a href="../index.html">BG News</a></h1>
                 </div>
                 <div class="footer_right">
+                    <a href="privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
                     <a href="#">ЕКИП</a>
-                    <a href="#">ЗА РЕКЛАМА</a>
                     <a href="https://github.com/krav700/News_Site">ПРОИЗХОД</a>
                 </div>
         </div>
