feat: add team page

--- a/pages/generalTAC.html
+++ b/pages/generalTAC.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="footer_right">
                     <a href="privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
-                    <a href="#">ЕКИП</a>
+                    <a href="team.html">ЕКИП</a>
                     <a href="https://github.com/krav700/News_Site">ПРОИЗХОД</a>
                 </div>
         </div>
