--- a/pages/team.html
+++ b/pages/team.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/team.css">
     <title>About Us</title>
 </head>
 <body>
@@ -17,10 +18,18 @@
         <a href="#">ВРЕМЕТО</a>
     </div>
 
-    <div class="content" id="messagePage">
-    <p class="blog_text"> <span id="blog_heading"> Съобщение изпратено! </span><br><br>
-        Нашият екип от <strong> BG NEWS </strong> ще се свърже с вас при първа възможност на посоченият имейл!</p>
-        <h1 class="messageGoBack"><a href="index.html" style="color: black;">BG News</a></h1>
+    <div class="content">
+        <div>
+            <p class="blog_text"> <span id="blog_heading"> ЕКИП </span><br></p>
+            <img src="../images/teamAvatar.png" alt="Avatar">
+            <h2>Стефан Иванов</h2>
+            <div class="socials">
+                <a href="https://github.com/krav700"><img class="socials_image" src="../images/githubLogo.png" alt="Avatar"></a>
+                <a href="https://www.instagram.com/stefanetuka/"><img class="socials_image" id="instagram" src="../images/instagramLogo.png" alt="Avatar"></a>
+            </div>
+            
+
+        </div>
     </div>
     <div class="all_footers">
         <div class="before_footer">
@@ -39,8 +48,8 @@
                     <h1 id="footer_h1"><a href="../index.html">BG News</a></h1>
                 </div>
                 <div class="footer_right">
-                    <a href="privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
-                    <a href="team.html">ЕКИП</a>
+                    <a href="#">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
+                    <a href="#">ЕКИП</a>
                     <a href="https://github.com/krav700/News_Site">ПРОИЗХОД</a>
                 </div>
         </div>
