--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <div class="footer_right">
             <a href="pages/privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
-            <a href="#">ЕКИП</a>
+            <a href="pages/team.html">ЕКИП</a>
             <a href="https://github.com/krav700/News_Site">ПРОИЗХОД</a>
         </div>
 </div>
