--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -40,8 +40,8 @@
                     <h1 id="footer_h1"><a href="../index.html">BG News</a></h1>
                 </div>
                 <div class="footer_right">
-                    <a href="privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
-                    <a href="#">ЕКИП</a>
+                    <a href="#">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
+                    <a href="team.html">ЕКИП</a>
                     <a href="https://github.com/krav700/News_Site">ПРОИЗХОД</a>
                 </div>
         </div>
