feat: add favicon fix: title on every page

--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/contact.css">
     <script src="../scripts/main.js" defer></script>
-    <title>Contact Us</title>
+    <link rel="icon" type="image/x-icon" href="../images/logoFavicon.png">
+    <title>Контакт</title>
 </head>
 <body>
     <div class="header">
