--- a/pages/team.html
+++ b/pages/team.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/team.css">
-    <title>About Us</title>
+    <link rel="icon" type="image/x-icon" href="../images/logoFavicon.png">
+    <title>Екип</title>
 </head>
 <body>
     <div class="header">
