feat: add hover effect on links

--- a/pages/messageSent.html
+++ b/pages/messageSent.html
@@ -10,12 +10,11 @@
 <body>
     <div class="header">
         <h1><a href="../index.html">BG News</a></h1>
-        <a href="#">У НАС</a>
-        <a href="#">ПО СВЕТА</a>
-        <a href="#">ИКОНОМИКА</a>
-        <a href="#">КОМЕНТАРИ</a>
-        <a href="#">СПОРТ</a>
-        <a href="#">ВРЕМЕТО</a>
+        <nav>
+            <div class="header_links"><a href="pages/aboutUs.html"><span>ЗА НАС</span></a></div>
+            <div class="header_links"><a href="pages/contactUs.html"><span>КОНТАКТИ</span></a></div>
+            <div class="header_links"><a href="pages/team.html"><span>ЕКИП</span></a></div>
+        </nav>
     </div>
 
     <div class="content" id="messagePage">
