feat: add inbeded video

--- a/index.html
+++ b/index.html
@@ -19,114 +19,124 @@
     </div>
 
     <div class="content">
-        <div class="column1">
+        <div class="columns">
+            <div class="column1">
 
-                <img class="hero_image" src="images/mainImage.jpg" alt="Zelenski">
+                    <img class="hero_image" src="images/mainImage.jpg" alt="Zelenski">
 
-        <div class="cards">
-            <div class="card">
-                <img class="card_img" src="images/content1.jpg" alt="Makron">
-                <div class="card_content">
-                    <h4>Макрон приема Тръмп като електрошок за Европа</h4>
-                    <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
-                    <p class="card_description">Само Зеленски може да преговаря от името на страната</p>
-                </div>
-            </div>
-            <div class="card2">
-                <img class="card_img" src="images/content3.jpg" alt="Makron">
-                <div class="card_content">
-                    <h4>Моди и Тръмп решават за митата и търговията</h4>
-                    <p class="card_littleText">⏲ преди 4 часа | <a href="#" class="card_link">Политика</a></p>
-                    <p class="card_description">Двамата лидери са готови да избегнат търговската война чрез сделки</p>
-                </div>
-            </div>
-            <div class="card">
-                <img class="card_img" src="images/content4.jpg" alt="Makron">
-                <div class="card_content">
-                    <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
-                    <p class="card_littleText">⏲ преди 6 час | <a href="#" class="card_link">Политика</a></p>
-                    <p class="card_description">Двамата лидери са готови да избегнат търговска война чрез сделки</p>
-                </div>
-            </div>
-            <div class="card2">
-                <img class="card_img" src="images/content2.jpg" alt="Makron">
-                <div class="card_content">
-                    <h4>Великобритания задържа шестима за трафик на мигранти</h4>
-                    <p class="card_littleText">⏲ преди 11 часа | <a href="#" class="card_link">Политика</a></p>
-                    <p class="card_description">Според властите, групата е действала и в други държави, сред които Белгия и Итал....</p>
-                </div>
-            </div>
-        </div>
-
-
-        </div>
-        <div class="column2">
-                <div class="card3">
-                    <div class="card_content">
-                        <h4 style="text-align: center; padding-bottom: 10px;">Последно</h4>
-                    </div>
-                </div>
-                <div class="card3">
+            <div class="cards">
+                <div class="card">
+                    <img class="card_img" src="images/content1.jpg" alt="Makron">
                     <div class="card_content">
                         <h4>Макрон приема Тръмп като електрошок за Европа</h4>
                         <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_description">Само Зеленски може да преговаря от името на страната</p>
                     </div>
                 </div>
-                <div class="card3">
-                    <div class="card_content">
-                        <h4>Тръмп обяви тристрани преговори за прекратяване на войната в Украйна</h4>
-                        <p class="card_littleText">⏲ преди 14 минути | <a href="#" class="card_link">Политика</a></p>
-                    </div>
-                </div>
-                <div class="card3">
-                    <div class="card_content">
-                        <h4>САЩ депортира 119 мигранти в Панама</h4>
-                        <p class="card_littleText">⏲ преди 43 минути | <a href="#" class="card_link">Политика</a></p>
-                    </div>
-                </div>
-                <div class="card3">
-                    <div class="card_content">
-                        <h4>Мексико може да съди Google Maps заради преименуването на Мексиканския залив</h4>
-                        <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
-                    </div>
-                </div>
-                <div class="card3">
-                    <div class="card_content">
-                        <h4>ISW: Следващите действия на Русия срещу съседите зависят от мира с Украйна</h4>
-                        <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
-                    </div>
-                </div>
-                <div class="card3">
-                    <div class="card_content">
-                        <h4>Рубио и Сибиха обсъдиха мира в Украйна</h4>
-                        <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
-                    </div>
-                </div>
-                <div class="card3">
-                    <div class="card_content">
-                        <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
-                        <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
-                    </div>
-                </div>
-                <div class="card3">
-                    <div class="card_content">
-                        <h4>14 февруари - какво отбелязваме днес</h4>
-                        <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
-                    </div>
-                </div>
-                <div class="card3">
+                <div class="card2">
+                    <img class="card_img" src="images/content3.jpg" alt="Makron">
                     <div class="card_content">
                         <h4>Моди и Тръмп решават за митата и търговията</h4>
-                        <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_littleText">⏲ преди 4 часа | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_description">Двамата лидери са готови да избегнат търговската война чрез сделки</p>
                     </div>
                 </div>
-                <div class="card3">
+                <div class="card">
+                    <img class="card_img" src="images/content4.jpg" alt="Makron">
                     <div class="card_content">
-                        <h4>Тръмп подписа и за реципрочните мита</h4>
-                        <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
+                        <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
+                        <p class="card_littleText">⏲ преди 6 час | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_description">Двамата лидери са готови да избегнат търговска война чрез сделки</p>
+                    </div>
+                </div>
+                <div class="card2">
+                    <img class="card_img" src="images/content2.jpg" alt="Makron">
+                    <div class="card_content">
+                        <h4>Великобритания задържа шестима за трафик на мигранти</h4>
+                        <p class="card_littleText">⏲ преди 11 часа | <a href="#" class="card_link">Политика</a></p>
+                        <p class="card_description">Според властите, групата е действала и в други държави, сред които Белгия и Итал....</p>
                     </div>
                 </div>
             </div>
+
+
+            </div>
+            <div class="column2">
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4 style="text-align: center; padding-bottom: 10px;">Последно</h4>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>Макрон приема Тръмп като електрошок за Европа</h4>
+                            <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>Тръмп обяви тристрани преговори за прекратяване на войната в Украйна</h4>
+                            <p class="card_littleText">⏲ преди 14 минути | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>САЩ депортира 119 мигранти в Панама</h4>
+                            <p class="card_littleText">⏲ преди 43 минути | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>Мексико може да съди Google Maps заради преименуването на Мексиканския залив</h4>
+                            <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>ISW: Следващите действия на Русия срещу съседите зависят от мира с Украйна</h4>
+                            <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>Рубио и Сибиха обсъдиха мира в Украйна</h4>
+                            <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
+                            <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>14 февруари - какво отбелязваме днес</h4>
+                            <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>Моди и Тръмп решават за митата и търговията</h4>
+                            <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+                    <div class="card3">
+                        <div class="card_content">
+                            <h4>Тръмп подписа и за реципрочните мита</h4>
+                            <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        <div id="aroundTheVideo"></div>
+        <div>
+            <video width="920" height="400" autoplay muted>
+                <source src="images/BGNewsIntro.mp4" type="video/mp4">
+                    Браузърът ви не поддържа видео тага.
+            </video>
+        </div>
+
     </div>
 
 <div class="before_footer">
