feat: add animation

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
                     </div>
             </div>
         </div>
-        <div id="aroundTheVideo"></div>
+        <div class="aroundTheVideoHeight">
+            <div id="aroundTheVideo"></div>
+        </div>
         <div>
             <video width="920" height="400" autoplay muted>
                 <source src="images/BGNewsIntro.mp4" type="video/mp4">
