--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Bg News</title>
 </head>
 <body>
-    <div class="header">
+    <div class="header" id="header">
         
-        <h1><a href="index.html">BG News</a></h1>
+        <h1><a href="#video">BG News</a></h1>
             <nav>
                 <div class="header_links"><a href="pages/aboutUs.html"><span>ЗА НАС</span></a></div>
                 <div class="header_links"><a href="pages/contactUs.html"><span>КОНТАКТИ</span></a></div>
@@ -28,15 +28,15 @@
                     <div class="image_shadow"></div>
 
                     <div class="mySlides fade">
-                        <img class="slideshow_image" src="images/kirilDobrev.jpg" alt="Кирил Добрев">
+                        <img class="slideshow_image" src="images/Content/kirilDobrev.jpg" alt="Кирил Добрев">
                         <div class="image_text">Кирил Добрев: България няма нужда от нови избори</div>
                     </div>
                     <div class="mySlides fade">
-                        <img class="slideshow_image" src="images/chervenoEvro.jpg" alt="Кирил Петков">
+                        <img class="slideshow_image" src="images/Content/chervenoEvro.jpg" alt="Кирил Петков">
                         <div class="image_text">Сарафов иска 5 имунитета на хулигани от "Възраждане"</div>
                     </div>
                     <div class="mySlides fade">
-                        <img class="slideshow_image" src="images/ruskiZaEvro.jpg" alt="Пеевски">
+                        <img class="slideshow_image" src="images/Content/ruskiZaEvro.jpg" alt="Пеевски">
                         <div class="image_text">С руското знаме бранят независимостта на лева</div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
 
             <div class="cards">
                 <div class="card">
-                    <img class="card_img" src="images/content1.jpg" alt="Makron">
+                    <img class="card_img" src="images/Content/content1.jpg" alt="Makron">
                     <div class="card_content">
                         <h4>Макрон приема Тръмп като електрошок за Европа</h4>
                         <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="card2">
-                    <img class="card_img" src="images/content3.jpg" alt="Makron">
+                    <img class="card_img" src="images/Content/content3.jpg" alt="Makron">
                     <div class="card_content">
                         <h4>Моди и Тръмп решават за митата и търговията</h4>
                         <p class="card_littleText">⏲ преди 4 часа | <a href="#" class="card_link">Политика</a></p>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card_img" src="images/content4.jpg" alt="Makron">
+                    <img class="card_img" src="images/Content/content4.jpg" alt="Makron">
                     <div class="card_content">
                         <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
                         <p class="card_littleText">⏲ преди 6 час | <a href="#" class="card_link">Политика</a></p>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="card2">
-                    <img class="card_img" src="images/content2.jpg" alt="Makron">
+                    <img class="card_img" src="images/Content/content2.jpg" alt="Makron">
                     <div class="card_content">
                         <h4>Великобритания задържа шестима за трафик на мигранти</h4>
                         <p class="card_littleText">⏲ преди 11 часа | <a href="#" class="card_link">Политика</a></p>
@@ -81,7 +81,6 @@
                     </div>
                 </div>
             </div>
-
 
             </div>
             <div class="column2">
@@ -152,15 +151,39 @@
                     </div>
             </div>
         </div>
+
+        <div class="editorsChoice">
+            <h1>Избор на редактора</h1>
+            <img src="images/Content/rosenKaradimov.jpg" alt="Росен Карадимов">
+            <img src="images/Content/ilhanKyuchuk.jpg" alt="Илхан Кючук">
+            <img src="images/Content/mladiBulgari.jpg" alt="Българското знаме">
+            <img src="images/Content/beliqDom.jpg" alt="Президент Тръмп">
+            <h4>Росен Карадимов няма да се оттегли от битката за КЗК</h4>
+            <h4>Илхан Кючук вижда не разграждане, а утвърждаване на модела "Пеевски"</h4>
+            <h4>62% от младите българи готови да бранят родината си във война</h4>
+            <h4>След скандала в Белия дом Тръмп спира военната помощ за украйна?</h4>
+            <img src="images/Content/voennaSlujba.jpg" alt="Войници">
+            <img src="images/Content/merkel.jpg" alt="Меркел пред евопейското знаме">
+            <img src="images/Content/pravosudieto.jpg" alt="АОБР и министърът на правосъдието">
+            <img src="images/Content/helikopter.jpg" alt="Медицински хеликоптер">
+            <h4>Трябра ли Европа да върне задължителната военна служба?</h4>
+            <h4>Меркел призова ЕС да създаде "истинска европейска армия"</h4>
+            <h4>Правосъдният министър и АОБР умуват върху създаването на регистър на арбитражните съдилища</h4>
+            <h4>Вторият медицински хеликоптер пристигна у нас</h4>
+        </div>
+
+
         <div class="aroundTheVideoHeight">
             <div id="aroundTheVideo"></div>
         </div>
         <div>
-            <video width="920" height="400" autoplay muted>
+            <video width="920" height="400" autoplay muted id="video">
                 <source src="images/BGNewsIntro.mp4" type="video/mp4">
                     Браузърът ви не поддържа видео тага.
             </video>
         </div>
+
+
 
     </div>
 
@@ -177,7 +200,7 @@
             <a href="pages/generalTAC.html">ОБЩИ УСЛОВИЯ</a>
         </div>
         <div class="footer_center">
-            <h1 id="footer_h1"><a href="index.html">BG News</a></h1>
+            <h1 id="footer_h1"><a href="#header">BG News</a></h1>
         </div>
         <div class="footer_right">
             <a href="pages/privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
