bugfix: fix broken links on pages make js work last commit add images/Content folder

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -11,9 +11,9 @@
     <div class="header">
         <h1><a href="../index.html">BG News</a></h1>
         <nav>
-            <div class="header_links"><a href="pages/aboutUs.html"><span>ЗА НАС</span></a></div>
-            <div class="header_links"><a href="pages/contactUs.html"><span>КОНТАКТИ</span></a></div>
-            <div class="header_links"><a href="pages/team.html"><span>ЕКИП</span></a></div>
+            <div class="header_links"><a href="aboutUs.html"><span>ЗА НАС</span></a></div>
+            <div class="header_links"><a href="contactUs.html"><span>КОНТАКТИ</span></a></div>
+            <div class="header_links"><a href="team.html"><span>ЕКИП</span></a></div>
         </nav>
     </div>
 
@@ -40,7 +40,7 @@
                     <h1 id="footer_h1"><a href="../index.html">BG News</a></h1>
                 </div>
                 <div class="footer_right">
-                    <a href="#">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
+                    <a href="privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
                     <a href="team.html">ЕКИП</a>
                     <a href="https://github.com/krav700/News_Site">ПРОИЗХОД</a>
                 </div>
