--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/contact.css">
-    <script src="../scripts/main.js" defer></script>
+    <script src="../scripts/contact.js" defer></script>
     <link rel="icon" type="image/x-icon" href="../images/logoFavicon.png">
     <title>Контакт</title>
 </head>
@@ -13,9 +13,9 @@
     <div class="header">
         <h1><a href="../index.html">BG News</a></h1>
         <nav>
-            <div class="header_links"><a href="pages/aboutUs.html"><span>ЗА НАС</span></a></div>
-            <div class="header_links"><a href="pages/contactUs.html"><span>КОНТАКТИ</span></a></div>
-            <div class="header_links"><a href="pages/team.html"><span>ЕКИП</span></a></div>
+            <div class="header_links"><a href="aboutUs.html"><span>ЗА НАС</span></a></div>
+            <div class="header_links"><a href="contactUs.html"><span>КОНТАКТИ</span></a></div>
+            <div class="header_links"><a href="team.html"><span>ЕКИП</span></a></div>
         </nav>
     </div>
 
