--- a/pages/privacyPolicy.html
+++ b/pages/privacyPolicy.html
@@ -11,9 +11,9 @@
     <div class="header">
         <h1><a href="../index.html">BG News</a></h1>
         <nav>
-            <div class="header_links"><a href="pages/aboutUs.html"><span>ЗА НАС</span></a></div>
-            <div class="header_links"><a href="pages/contactUs.html"><span>КОНТАКТИ</span></a></div>
-            <div class="header_links"><a href="pages/team.html"><span>ЕКИП</span></a></div>
+            <div class="header_links"><a href="aboutUs.html"><span>ЗА НАС</span></a></div>
+            <div class="header_links"><a href="contactUs.html"><span>КОНТАКТИ</span></a></div>
+            <div class="header_links"><a href="team.html"><span>ЕКИП</span></a></div>
         </nav>
     </div>
 
