feat: make header dissappear and appear when scro- lling

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="images/logoFavicon.png">
     <script src="scripts/main.js" defer></script>
+    <script src="scripts/scroll.js" defer></script>
     <title>Bg News</title>
 </head>
 <body>
-    <div class="header" id="header">
+    <div class="header scroll">
         
         <h1><a href="#video">BG News</a></h1>
             <nav>
@@ -23,7 +24,7 @@
         <div class="columns">
             <div class="column1">
 
-                <div class="slideshow_container">
+                <div class="slideshow_container" id="slideshow_container">
 
                     <div class="image_shadow"></div>
 
@@ -200,7 +201,7 @@
             <a href="pages/generalTAC.html">ОБЩИ УСЛОВИЯ</a>
         </div>
         <div class="footer_center">
-            <h1 id="footer_h1"><a href="#header">BG News</a></h1>
+            <h1 id="footer_h1"><a href="#slideshow_container">BG News</a></h1>
         </div>
         <div class="footer_right">
             <a href="pages/privacyPolicy.html">ПОЛИТИКА ЗА ПОВЕРИТЕЛНОСТ</a>
